Replaced initial working data from data.js with connected API data.

--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
     <title>Misko's Job Search</title>
     <link rel='stylesheet' href='https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css'>
     <script src="https://cdn.plot.ly/plotly-latest.min.js"></script>
+    <link rel="stylesheet" href="https://unpkg.com/leaflet@1.6.0/dist/leaflet.css"
+    integrity="sha512-xwE/Az9zrjBIphAcBb3F6JVqxf46+CDLwfLMHloNu6KEQCAWi6HcDUbeOfBIptF7tcCzusKFjFw2yuvEpDL9wQ=="
+    crossorigin="" />
 </head>
 
 <body>
@@ -39,16 +42,24 @@
         </div>
         <div class='row'>
             <div class='col-md-6'>
-                <div id="fieldBar"></div>
+                <div id='fieldBar'></div>
             </div>
             <div class='col-md-6'>
-                <div id="typeBar"></div>
+                <div id='typeBar'></div>
             </div>
+        </div>
+        <div class='row'>
+            <div id='map'></div>
         </div>
     </div>
 
+    <script src="https://d3js.org/d3.v5.min.js"></script>
+    <script src="https://unpkg.com/leaflet@1.6.0/dist/leaflet.js"
+    integrity="sha512-gZwIG9x3wUXg2hdXF6+rVkLF/0Vi9U8D2Ntg4Ga5I5BZpVkVxlJWbSQtXPSiUTtC0TjtGOmxa1AJPuV0CPthew=="
+    crossorigin=""></script>
     <script src='./static/js/data.js'></script>
     <script src='./static/js/app.js'></script>
+
 
 </body>
 
