Added job_search.html and switched out the html content for index.html and job_search.html.

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset='UTF-8'>
     <meta name='viewport' content='width=device-width, initial-scale=1.0'>
     <meta http-equiv='X-UA-Compatible' content='ie=edge'>
-    <title>Misko's Job Search</title>
+    <title>Miodrag "Misko" Radovic</title>
     <link
     rel="stylesheet"
     href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
@@ -14,9 +14,6 @@
     />
     <link rel='stylesheet' href='https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css'>
     <script src="https://cdn.plot.ly/plotly-latest.min.js"></script>
-    <link rel="stylesheet" href="https://unpkg.com/leaflet@1.6.0/dist/leaflet.css"
-    integrity="sha512-xwE/Az9zrjBIphAcBb3F6JVqxf46+CDLwfLMHloNu6KEQCAWi6HcDUbeOfBIptF7tcCzusKFjFw2yuvEpDL9wQ=="
-    crossorigin="" />
     <link rel="stylesheet" type="text/css" href="static/css/style.css">
 </head>
 
@@ -35,57 +32,14 @@
         <div class="collapse navbar-collapse" id="navbar">
             <div class="navbar-nav">
                 <a class="nav-item nav-link active" id="aboutMe" href="/">About Me</a>
-                <a class="nav-item nav-link" id="jobSearch" href="/job-search">Job Search</a>
+                <a class="nav-item nav-link" id="jobSearch" href="/job_search">Job Search</a>
             </div>
         </div>
     </nav>
 
-    <div class='container'>
-        <div class='row'>
-            <div class='col-md-12 jumbotron text-center'>
-                <div class='text-info'>
-                    <h1>Misko's Job Search</h1>
-                    <p>Updated:</p>
-                    <p id='dateContainer'></p>
-                    <p>Eastern Time (UTC -5/-4)</p>
-                </div>
-            </div>
-        </div>
-        <div class='row'>
-            <div class='col-md-6 text-center'>
-                <div class='alert alert-info'>
-                    <h4>Number of Applications Sent:</h4>
-                    <h4 id='appCount'></h4>
-                </div>
-            </div>
-            <div class='col-md-6 text-center'>
-                <div class='alert alert-info'>
-                    <h4>Number of Interviews:</h4>
-                    <h4 id='intCount'></h4>
-                </div>
-            </div>
-        </div>
-        <div class='row'>
-            <div class='col-md-6'>
-                <div id='fieldBar'></div>
-            </div>
-            <div class='col-md-6'>
-                <div id='typeBar'></div>
-            </div>
-        </div>
-        <div class='row'>
-            <h2>Company Locations</h2>
-            <div id='map'></div>
-        </div>
-    </div>
+    <h1>Helloooooooooooooooooooooooooooo</h1>
 
-    <script src="https://unpkg.com/leaflet@1.6.0/dist/leaflet.js"
-    integrity="sha512-gZwIG9x3wUXg2hdXF6+rVkLF/0Vi9U8D2Ntg4Ga5I5BZpVkVxlJWbSQtXPSiUTtC0TjtGOmxa1AJPuV0CPthew=="
-    crossorigin=""></script>
-    <script src="https://d3js.org/d3.v5.min.js"></script>
-    <script src='./static/js/states_data.js'></script>
     <script src='./static/js/app.js'></script>
-
 
 </body>
 
