Inclusion of Spotify playlists.

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     />
     <link rel='stylesheet' href='https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css'>
     <script src="https://cdn.plot.ly/plotly-latest.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/marked/0.3.5/marked.min.js"></script>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" type="text/css" href="static/css/style.css">
 </head>
 
@@ -63,6 +63,28 @@
 <body>
 
     <div class='container'>
+        <p></p>
+        <!-- Social Media -->
+        <div class='row'>
+            <!-- Linkedin -->
+            <div class='col-md-4 text-center'>
+                <a class="btn btn-primary" style="background-color: #0082ca;" href="https://www.linkedin.com/in/miodrag-misko-radovic/" target="_blank" role="button">
+                    <i class="fa fa-linkedin-square me-2"></i>LinkedIn
+                </a>
+            </div>
+            <!-- Github -->
+            <div class='col-md-4 text-center'>
+                <a class="btn btn-primary" style="background-color: #333333;" href="https://github.com/mradovic10" target="_blank" role="button">
+                    <i class="fa fa-github me-2"></i>GitHub
+                </a>
+            </div>
+            <!-- Email -->
+            <div class='col-md-4 text-center'>
+                <a class="btn btn-primary" style="background-color: #dd4b39;" href="mailto: radovic.miodrag10@gmail.com" role="button">
+                    <i class="fa fa-envelope-square me-2"></i>Email
+                </a>
+            </div>
+        </div>
         <h2>Featured Projects</h2>
         <div class='row'>
             <!-- Paralysis of Choice -->
@@ -153,26 +175,27 @@
                 </div>
             </div>
         </div>
-        <!-- Social Media -->
-        <h2>Connect With Me</h2>
+        <h2>Check out some of my playlists on Spotify!</h2>
         <div class='row'>
-            <!-- Linkedin -->
-            <div class='col-md-4 text-center'>
-                <a class="btn btn-primary" style="background-color: #0082ca;" href="https://www.linkedin.com/in/miodrag-misko-radovic/" target="_blank" role="button">
-                    <i class="fab fa-linkedin-in me-2"></i>LinkedIn
-                </a>
+            <div class='col-md-4'>
+                <iframe style="border-radius:12px" src="https://open.spotify.com/embed/playlist/5lic8yOBMGk9M9pAGS5oWv?utm_source=generator&theme=0" width="100%" height="152" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
             </div>
-            <!-- Github -->
-            <div class='col-md-4 text-center'>
-                <a class="btn btn-primary" style="background-color: #333333;" href="https://github.com/mradovic10" target="_blank" role="button">
-                    <i class="fab fa-github me-2"></i>GitHub
-                </a>
+            <div class='col-md-4'>
+                <iframe style="border-radius:12px" src="https://open.spotify.com/embed/playlist/71XTpfXBD3r4MOMFnjJ4pT?utm_source=generator&theme=0" width="100%" height="152" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
             </div>
-            <!-- Email -->
-            <div class='col-md-4 text-center'>
-                <a class="btn btn-primary" style="background-color: #dd4b39;" href="mailto: radovic.miodrag10@gmail.com" role="button">
-                    <i class="fab fa-github me-2"></i>Email
-                </a>
+            <div class='col-md-4'>
+                <iframe style="border-radius:12px" src="https://open.spotify.com/embed/playlist/5OITbiIxVHbUjDLb4BK1I0?utm_source=generator&theme=0" width="100%" height="152" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
+            </div>
+        </div>
+        <div class='row'>
+            <div class='col-md-4'>
+                <iframe style="border-radius:12px" src="https://open.spotify.com/embed/playlist/3piNMy493ob8p7pPCsFc6Y?utm_source=generator&theme=0" width="100%" height="152" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
+            </div>
+            <div class='col-md-4'>
+                <iframe style="border-radius:12px" src="https://open.spotify.com/embed/playlist/1M788nzuR0rv0OQGPJSc9a?utm_source=generator&theme=0" width="100%" height="152" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
+            </div>
+            <div class='col-md-4'>
+                <iframe style="border-radius:12px" src="https://open.spotify.com/embed/playlist/0UG0mZTslavGxv9qGmQDOX?utm_source=generator&theme=0" width="100%" height="152" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
             </div>
         </div>
     </div>
