Inclusion of another project in the Featured Projects section.

--- a/job_search.html
+++ b/job_search.html
@@ -41,6 +41,7 @@
     </nav>
 
     <div class='container'>
+        <!-- Heading -->
         <div class='row'>
             <div class='col-md-12 jumbotron text-center'>
                 <div class='text-info'>
@@ -52,12 +53,14 @@
             </div>
         </div>
         <div class='row'>
+            <!-- Application Count -->
             <div class='col-md-6 text-center'>
                 <div class='alert alert-info'>
                     <h4>Number of Applications Sent:</h4>
                     <h4 id='appCount'></h4>
                 </div>
             </div>
+            <!-- Interview Count -->
             <div class='col-md-6 text-center'>
                 <div class='alert alert-info'>
                     <h4>Number of Interviews:</h4>
@@ -66,14 +69,17 @@
             </div>
         </div>
         <div class='row'>
+            <!-- Industries Bar Graph -->
             <div class='col-md-6'>
                 <div id='fieldBar'></div>
             </div>
+            <!-- Job Type Bar Graph -->
             <div class='col-md-6'>
                 <div id='typeBar'></div>
             </div>
         </div>
         <div class='row'>
+            <!-- Map -->
             <h2>Company Locations</h2>
             <div id='map'></div>
         </div>
