--- a/index.html
+++ b/index.html
@@ -6,7 +6,9 @@
     <meta name='viewport' content='width=device-width, initial-scale=1.0'>
     <meta http-equiv='X-UA-Compatible' content='ie=edge'>
     <title>Miodrag "Misko" Radovic</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" 
+    rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" 
+    crossorigin="anonymous">
     <link
     rel="stylesheet"
     href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
@@ -14,7 +16,6 @@
     crossorigin="anonymous"
     />
     <link rel='stylesheet' href='https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css'>
-    <script src="https://cdn.plot.ly/plotly-latest.min.js"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" type="text/css" href="static/css/style.css">
 </head>
@@ -39,7 +40,7 @@
         </div>
     </nav>
 
-    <!-- Background image -->
+    <!-- Heading -->
     <div
         class="p-5 text-center bg-image"
         style="
@@ -85,6 +86,7 @@
                 </a>
             </div>
         </div>
+        <!-- Projects -->
         <h2>Featured Projects</h2>
         <div class='row'>
             <!-- Paralysis of Choice -->
@@ -174,7 +176,25 @@
                     </p>
                 </div>
             </div>
+            <!-- Job Search -->
+            <div
+            class="col-md-6 col-lg-4 d-flex align-items-stretch mb-5 mb-lg-0"
+            data-aos="zoom-in"
+            data-aos-delay="400"
+            >
+                <div class="icon-box">
+                    <h4 class="title">
+                        <a href="https://mradovic10.github.io/job_search" target="_blank">
+                            My Job Search
+                        </a>
+                    </h4>
+                    <p class="description">
+                        Interactive dashboard summarizing my job search as a Data Analyst.
+                    </p>
+                </div>
+            </div>
         </div>
+        <!-- Playlists -->
         <h2>Check out some of my playlists on Spotify!</h2>
         <div class='row'>
             <div class='col-md-4'>
