--- a/index.html
+++ b/index.html
@@ -24,14 +24,14 @@
 
     <!-- Navbar -->
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-        <button
+        <!-- <button
         class="navbar-toggler"
         type="button"
         data-toggle="collapse"
         data-target="#navbar"
         >
             <span class="navbar-toggler-icon"></span>
-        </button>
+        </button> -->
         <div class="collapse navbar-collapse" id="navbar">
             <div class="navbar-nav">
                 <a class="nav-item nav-link active" id="aboutMe" href="/">About Me</a>
