Hover effects over social media links and project boxes.

--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
             data-aos="zoom-in"
             data-aos-delay="200"
             >
-                <div class="icon-box">
+                <div class="icon-box hover-overlay">
                     <h4 class="title">
                         <a href="https://stream-dash-app-00.herokuapp.com/" target="_blank">
                             Paralysis of Choice in the Age of Streaming
@@ -112,7 +112,7 @@
             data-aos="zoom-in"
             data-aos-delay="300"
             >
-                <div class="icon-box">
+                <div class="icon-box hover-overlay">
                     <h4 class="title">
                         <a href="http://projec4gtbootcampwebsite.s3-website-us-east-1.amazonaws.com/index.html" target="_blank">
                         Airbnb ProfitPilot
@@ -129,7 +129,7 @@
             data-aos="zoom-in"
             data-aos-delay="400"
             >
-                <div class="icon-box">
+                <div class="icon-box hover-overlay">
                     <h4 class="title">
                         <a href="https://public.tableau.com/views/2019_2022_bike_analysis/NYCCitiBikeAnalysis?:language=en-US&publish=yes&:display_count=n&:origin=viz_share_link" target="_blank">
                         NYC Citi Bike Analysis
@@ -148,7 +148,7 @@
             data-aos="zoom-in"
             data-aos-delay="400"
             >
-                <div class="icon-box">
+                <div class="icon-box hover-overlay">
                     <h4 class="title">
                         <a href="https://mradovic10.github.io/belly-button-challenge/" target="_blank">
                             Belly Button Challenge
@@ -165,7 +165,7 @@
             data-aos="zoom-in"
             data-aos-delay="400"
             >
-                <div class="icon-box">
+                <div class="icon-box hover-overlay">
                     <h4 class="title">
                         <a href="https://mradovic10.github.io/leaflet-challenge/" target="_blank">
                             USGS Earthquakes Feed
@@ -182,7 +182,7 @@
             data-aos="zoom-in"
             data-aos-delay="400"
             >
-                <div class="icon-box">
+                <div class="icon-box hover-overlay">
                     <h4 class="title">
                         <a href="https://mradovic10.github.io/job_search" target="_blank">
                             My Job Search
