--- a/job_search.html
+++ b/job_search.html
@@ -24,7 +24,7 @@
 
     <!-- Navbar -->
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-        <button
+        <!-- <button
         class="navbar-toggler"
         type="button"
         data-toggle="collapse"
@@ -32,12 +32,12 @@
         >
             <span class="navbar-toggler-icon"></span>
         </button>
-        <div class="collapse navbar-collapse" id="navbar">
+        <div class="collapse navbar-collapse" id="navbar"> -->
             <div class="navbar-nav">
                 <a class="nav-item nav-link" id="aboutMe" href="/">About Me</a>
                 <a class="nav-item nav-link active" id="jobSearch" href="/job_search">Job Search</a>
             </div>
-        </div>
+        <!-- </div> -->
     </nav>
 
     <div class='container'>
