Mobile app display of header pic from index.html testing.

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <link rel="stylesheet" type="text/css" href="static/css/style.css">
 </head>
 
-<header width = "device-width">
+<header>
 
     <!-- Navbar -->
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
@@ -45,7 +45,7 @@
         class="p-5 text-center bg-image"
         style="
         background-image: url('https://sat02pap005files.storage.live.com/y4mWJ_BYBdX_WMkxilr4pZoo7114F4439YPBPgu-GO_kXHb9XhPvJpEAZeJuOIFCmTUlTMvRTYGJKUf6QGyEe_gDP58P-iBm84oS0Wt5KCRnA4LLjCLT_USH6Xr4eHvLMmNQRGpFvlX2QUVuAV9cRSYctliO46YiVvQi1wbAPTvLS8h14-u90STKJlx8MH5aqvn?width=1024&height=437&cropmode=none');
-        width: 1024px;
+        width: device-width;
         height: 400px;
         "
     >
