--- a/job_search.html
+++ b/job_search.html
@@ -89,7 +89,8 @@
     integrity="sha512-gZwIG9x3wUXg2hdXF6+rVkLF/0Vi9U8D2Ntg4Ga5I5BZpVkVxlJWbSQtXPSiUTtC0TjtGOmxa1AJPuV0CPthew=="
     crossorigin=""></script>
     <script src="https://d3js.org/d3.v5.min.js"></script>
-    <script src='./static/js/states_data.js'></script>
+    <!-- <script src='./static/js/locations.js'></script>
+    <script src='./static/js/states_data.js'></script> -->
     <script src='./static/js/app.js'></script>
 
 
