Removal of Interview Count and replaced it with Average Response Time (Days).

--- a/job_search.html
+++ b/job_search.html
@@ -60,11 +60,11 @@
                     <h4 id='appCount'></h4>
                 </div>
             </div>
-            <!-- Interview Count -->
+            <!-- Response Time -->
             <div class='col-md-6 text-center'>
                 <div class='alert alert-info'>
-                    <h4>Number of Interviews:</h4>
-                    <h4 id='intCount'></h4>
+                    <h4>Average Response Time (Days):</h4>
+                    <h4 id='avgRespTime'></h4>
                 </div>
             </div>
         </div>
