Inclusion of Size of Companies bar graph.

--- a/job_search.html
+++ b/job_search.html
@@ -79,6 +79,12 @@
             </div>
         </div>
         <div class='row'>
+            <!-- Company Size Bar Graph -->
+            <div class='col-md-12'>
+                <div id='sizeBar'></div>
+            </div>
+        </div>
+        <div class='row'>
             <!-- Map -->
             <h2>Company Locations</h2>
             <div id='map'></div>
