--- a/index.html
+++ b/index.html
@@ -4,7 +4,6 @@
 <head>
     <meta charset='UTF-8'>
     <meta name='viewport' content='width=device-width, initial-scale=1.0'>
-    <!-- <meta http-equiv='X-UA-Compatible' content='ie=edge'> -->
     <title>Miodrag "Misko" Radovic</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" 
     rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" 
@@ -24,20 +23,10 @@
 
     <!-- Navbar -->
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-        <!-- <button
-        class="navbar-toggler"
-        type="button"
-        data-toggle="collapse"
-        data-target="#navbar"
-        >
-            <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbar"> -->
             <div class="navbar-nav">
-                <a class="nav-item nav-link active" id="aboutMe" href="/">About Me</a>
+                <a class="nav-item nav-link active" id="home" href="/">Home</a>
                 <a class="nav-item nav-link" id="jobSearch" href="/job_search">Job Search</a>
             </div>
-        <!-- </div> -->
     </nav>
 
     <!-- Heading -->
