--- a/job_search.html
+++ b/job_search.html
@@ -4,7 +4,6 @@
 <head>
     <meta charset='UTF-8'>
     <meta name='viewport' content='width=device-width, initial-scale=1.0'>
-    <!-- <meta http-equiv='X-UA-Compatible' content='ie=edge'> -->
     <title>Misko's Job Search</title>
     <link
     rel="stylesheet"
@@ -24,20 +23,10 @@
 
     <!-- Navbar -->
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-        <!-- <button
-        class="navbar-toggler"
-        type="button"
-        data-toggle="collapse"
-        data-target="#navbar"
-        >
-            <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbar"> -->
             <div class="navbar-nav">
-                <a class="nav-item nav-link" id="aboutMe" href="/">About Me</a>
+                <a class="nav-item nav-link" id="home" href="/">Home</a>
                 <a class="nav-item nav-link active" id="jobSearch" href="/job_search">Job Search</a>
             </div>
-        <!-- </div> -->
     </nav>
 
     <div class='container'>
@@ -95,8 +84,6 @@
     integrity="sha512-gZwIG9x3wUXg2hdXF6+rVkLF/0Vi9U8D2Ntg4Ga5I5BZpVkVxlJWbSQtXPSiUTtC0TjtGOmxa1AJPuV0CPthew=="
     crossorigin=""></script>
     <script src="https://d3js.org/d3.v5.min.js"></script>
-    <!-- <script src='./static/js/locations.js'></script>
-    <script src='./static/js/states_data.js'></script> -->
     <script src='./static/js/app.js'></script>
 
 
