Reorganizing of folder structure.

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     />
     <link rel='stylesheet' href='https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css'>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-    <link rel="stylesheet" type="text/css" href="static/css/style.css">
+    <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 
 <header>
@@ -207,7 +207,7 @@
         </div>
     </div>
 
-    <script src='./static/js/app.js'></script>
+    <script src='app.js'></script>
 
 </body>
 
