--- a/job_search.html
+++ b/job_search.html
@@ -62,9 +62,9 @@
             <div class='col-md-6'>
                 <div id='fieldBar'></div>
             </div>
-            <!-- Job Type Bar Graph -->
+            <!-- Job Type Pie Graph -->
             <div class='col-md-6'>
-                <div id='typeBar'></div>
+                <div id='typePie'></div>
             </div>
         </div>
         <div class='row'>
